# walldasher

./: LICENSE  README.md  bun.lockb  index.html  package.json  tsconfig.json  ui.config.json  vite.config.ts
.cargo/: config.toml
src/: index.css  index.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json  overlay.json
src-tauri/permissions/autogenerated/: bracket_matches.toml  connect_to_rl.toml  connect_to_rl_without_validation.toml  event_players.toml  set_start_key.toml  tournament.toml  tournaments.toml
src-tauri/src/: lib.rs  main.rs  tauri.schema.json
src-tauri/src/db/: migration-1.sql  migrations.rs  migrations.sql  mod.rs
src-tauri/src/graphql/: queries.graphql  schema.graphql
src-tauri/src/relay/: connections.rs  server.rs
src-tauri/src/rl/: client.rs
src-tauri/src/router/: server.rs
src-tauri/src/start/: client.rs  error.rs  mod.rs  protocol.rs  query.rs  types.rs
src/app/: App.tsx  Layout.tsx  index.css
src/assets/: Cog6ToothIcon.tsx  MinusIcon.tsx  Square2StackIcon.tsx  StopIcon.tsx  XMarkIcon.tsx  index.tsx
src/assets/icons/: Spinner.tsx
src/components/: DummyText.tsx  api-form-old.tsx  api-form.tsx  explorer.tsx  rl-form.tsx  rl-status-badge.tsx  settings.tsx  start-form.tsx  team-form.tsx  topbar.tsx
src/components/TeamForm/: TeamForm.tsx
src/components/changeLogo/: ChangeLogo.tsx  index.tsx
src/components/explorer/: Explorer.tsx
src/components/settings/: Settings.tsx
src/components/settings/api/: APIForm.tsx  api.test.ts  validation.ts
src/components/topbar/: NoInternet.tsx  RLStatus.tsx  Topbar.tsx
src/components/ui/: delta-bar.tsx  dialog.tsx  hyperlink.tsx  number-field.tsx  toast.tsx  tooltip.tsx
src/contexts/: db.tsx  game-state.tsx  gameState.tsx  internet.tsx  matchState.tsx  rl-ws-status.tsx  rl.tsx  rlStatus.tsx  rlWsStatus.tsx  snapshot.tsx  startKey.tsx  stats.tsx  store.tsx  tournamentState.tsx  ws.tsx
src/lib/: boostService.ts  consts.ts  db.ts  error.ts  gameService.ts  images.ts  start.ts  store.ts  utils.ts  ws.ts
src/lib/start/: codegen.ts
src/lib/start/graphql/: execute.ts  gql.ts  graphql.ts  schema.graphql
src/main/: Main.tsx  index.css
src/models/: Game.ts  Match.ts  MatchState.ts  TournamentState.ts  db.ts  model.json
src/models/game/: BallHit.ts
src/models/game/UpdateState/: USBall.ts  USPlayer.ts  USTeam.ts
src/models/ingame/: GameState.ts  MatchState.ts
src/models/ingame/events/: GoalScored.ts  MatchEnded.ts
src/pages/: Guard.tsx  Layout.tsx  index.tsx
src/pages/app/: index.tsx
src/pages/app/dev/: Dev.tsx  index.tsx
src/pages/app/home/: Home.tsx  index.tsx
src/pages/app/match/: Match.tsx  MatchBestOf.tsx  MatchGameNumber.tsx  MatchTitle.tsx  index.tsx  match-best-of.tsx  match-title.tsx
src/pages/app/tournament/: AddTournament.tsx  NoKey.tsx  Page.tsx  Tournament.tsx  add-tournament.tsx  index.tsx  no-key.tsx
src/pages/match/: Match.tsx
src/pages/overlay/: index.tsx
src/pages/overlay-old/: index.tsx
src/pages/overlay-old/ingame/: index.tsx  replay.tsx
src/pages/overlay-old/nextup/: NextUp.tsx
src/pages/overlay-old/postgame/: PostGame.tsx  index.tsx
src/pages/overlay-old/roundrobin/: index.tsx
src/pages/overlay-old/winner/: index.tsx  winner.tsx
src/pages/overlay/ingame/: InGame.tsx  boostmeter.tsx  scorebug.tsx  statcard.tsx
src/pages/overlay/nextup/: NextUp.tsx  index.tsx
src/pages/overlay/phase/: Phase.tsx  index.tsx
src/pages/overlay/postgame/: PostGame.tsx  index.tsx
src/pages/settings/: Settings.tsx
src/start/: codegen.ts  get.ts  query.ts
src/start/graphql/: gql.ts  graphql.ts
src/view/: View.tsx  index.css
(+20 files in other folders)
