[package]
name = "Walldasher"
version = "1.0.0"
description = "Aplicación para el manejo de overlays de Rocket League para transamisiones en vivo"
authors = ["DAHDOR"]
license = "MIT"
repository = "https://github.com/DAHDOR/walldasher"
default-run = "Walldasher"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "walldasher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.2", features = ["codegen"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.6", features = ["image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
graphql_client = "0.14.0"
reqwest = { version = "0.12.12", features = ["json"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tokio-tungstenite = "0.26.1"
futures = "0.3.31"
futures-util = "0.3.31"
tauri-plugin-localhost = "2"
tauri-plugin-fs = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
incremental = true      # Compile your binary in smaller steps.

[profile.release]
strip = true            # Automatically strip symbols from the binary
panic = "abort"         # Strip expensive panic clean-up logic
codegen-units = 1       # Compile crates one after another so the compiler can optimize better
lto = true              # Enables link to optimizations
opt-level = "s"         # Optimize for binary size. Use `3` if you prefer speed.

[dev-dependencies]
tauri = { version = "2.0.6", features = ["test"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
